--- a/modules/stic_Advanced_Web_Forms/wizard/steps/step2.html
+++ b/modules/stic_Advanced_Web_Forms/wizard/steps/step2.html
@@ -1,1 +1,5 @@
-<h1>Step <span x-text="step"></span></h1>
+<h2 x-text="modStrings.LBL_WIZARD_TITLE_STEP2"></h2>
+
+<div class="wizard-step">
+
+</div>
