--- a/modules/stic_Advanced_Web_Forms/wizard/steps/step1.html
+++ b/modules/stic_Advanced_Web_Forms/wizard/steps/step1.html
@@ -1,27 +1,19 @@
-<h2 x-text="modStrings.LBL_WIZARD_TITLE_STEP1"></h2>
-
-<div class="wizard-step">
-  <form class="border-b border-gray-300 pb-6" id="wizard-step1-form">
-    <div class="grid grid-cols-1 lg:grid-cols-2 gap-x-6 gap-y-4">
+<form id="wizard-step1-form">
+  <div class="container"> 
+    <div class="row">
       <!-- Name -->
-      <div class="grid grid-cols-1 sm:grid-cols-4 gap-2 items-center">
-        <div class="sm:col-span-1">
-          <label for="name" x-text="modStrings.LBL_NAME + ':'"></label>
-          <span class="required">*</span>
-        </div>
-        <div class="sm:col-span-3 pr-12">
-          <input class="w-full max-w-9/10" required type="text" id="name" x-model="bean.name" />
-        </div>
+      <div class="col-6">
+        <label class="form-label" class="form-label" for="name" x-text="modStrings.LBL_NAME + ':'"></label>
+        <span class="required">*</span>
+        <input class="form-control" required type="text" id="name" x-model="bean.name" />
       </div>
 
       <!-- Assigned user -->
-      <div class="grid grid-cols-1 sm:grid-cols-4 gap-2 items-center">
-        <div class="sm:col-span-1">
-          <label for="assigned_user_name" x-text="modStrings.LBL_ASSIGNED_TO_NAME + ':'"></label>
-        </div>
-        <div class="sm:col-span-3 pr-12">
+      <div class="col-6">
+        <label class="form-label" for="assigned_user_name" x-text="modStrings.LBL_ASSIGNED_TO_NAME + ':'"></label>
+        <div class="input-group">
           <input
-            class="w-full max-w-7/10"
+            class="form-control"
             type="text"
             id="assigned_user_name"
             x-model="bean.assigned_user_name"
@@ -34,7 +26,7 @@
             @click="open_popup('Users', 600, 400, '', true, false, {
                                 'call_back_function':'set_wizard_assigned_user',
                                 'field_to_name_array': { 'id':'assigned_user_id', 'user_name':'assigned_user_name' }
-                               },'single', true);"
+                              },'single', true);"
           >
             <span class="suitepicon suitepicon-action-select"></span>
           </button>
@@ -43,74 +35,71 @@
           </button>
         </div>
       </div>
+    </div>
 
+    <div class="row">
       <!-- Base Module -->
-      <div class="grid grid-cols-1 sm:grid-cols-4 gap-2 items-center">
-        <div class="sm:col-span-1">
-          <label for="base_module" x-text="modStrings.LBL_BASE_MODULE + ':'"></label>
-          <span class="required">*</span>
-        </div>
-        <div class="sm:col-span-3 pr-12">
-          <select
-            class="border w-full"
-            id="base_module"
-            required
-            x-model="bean.base_module"
-            x-init="$nextTick(() => $el.value = bean.base_module)"
-          >
-            <option value=""></option>
-            <template x-for="[elKey, elLabel] in Object.entries(appListStrings.moduleList)" :key="elKey">
-              <option :value="elKey" x-text="elLabel"></option>
-            </template>
-          </select>
-        </div>
+      <div class="col-6">
+        <label class="form-label" for="base_module" x-text="modStrings.LBL_BASE_MODULE + ':'"></label>
+        <span class="required">*</span>
+        <select
+          class="form-select"
+          id="base_module"
+          required
+          x-model="bean.base_module"
+          x-init="$nextTick(() => {
+            let select = $('#base_module').selectize({
+              placeholder: '',
+              onChange: (value) => { bean.base_module = value }
+            })[0].selectize;
+            select.setValue(bean.base_module);
+          });"
+        >
+          <option value=""></option>
+          <template x-for="[elKey, elLabel] in Object.entries(appListStrings.moduleList)" :key="elKey">
+            <option :value="elKey" x-text="elLabel"></option>
+          </template>
+        </select>
       </div>
-
-      <!-- Generate url -->
-      <div class="grid grid-cols-1 sm:grid-cols-4 gap-2 items-center">
-        <div class="sm:col-span-1">
-          <label for="generate_url" x-text="modStrings.LBL_GENERATE_URL + ':'"></label>
-        </div>
-        <div class="sm:col-span-3 pr-12">
-          <input class="w-full" type="checkbox" id="generate_url" x-model="bean.generate_url" />
-        </div>
-      </div>
-
       <!-- Processing mode -->
-      <div class="grid grid-cols-1 sm:grid-cols-4 gap-2 items-center">
-        <div class="sm:col-span-1">
-          <label for="processing_mode" x-text="modStrings.LBL_PROCESSING_MODE + ':'"></label>
-          <span class="required">*</span>
-        </div>
-        <div class="sm:col-span-3 pr-12">
-          <select
-            id="processing_mode"
-            class="w-full border"
-            x-model="bean.processing_mode"
-            x-init="$nextTick(() => $el.value = bean.processing_mode)"
+      <div class="col-6">
+        <label class="form-label" for="processing_mode" x-text="modStrings.LBL_PROCESSING_MODE + ':'"></label>
+        <span class="required">*</span>
+        <select
+          class="form-select"
+          id="processing_mode"
+          x-model="bean.processing_mode"
+          x-init="$nextTick(() => $el.value = bean.processing_mode)"
+        >
+          <template
+            x-for="[elKey, elLabel] in Object.entries(appListStrings.stic_advanced_web_forms_processing_mode_list)"
+            :key="elKey"
           >
-            <template
-              x-for="[elKey, elLabel] in Object.entries(appListStrings.stic_advanced_web_forms_processing_mode_list)"
-              :key="elKey"
-            >
-              <option :value="elKey" x-text="elLabel"></option>
-            </template>
-          </select>
-        </div>
-      </div>
-
-      <!-- Description -->
-      <div class="sm:col-span-2 grid grid-cols-1 sm:grid-cols-8 gap-2 items-center">
-        <div class="sm:col-span-1">
-          <label for="description" x-text="modStrings.LBL_DESCRIPTION + ':'"></label>
-        </div>
-        <div class="sm:col-span-7">
-          <textarea class="w-full" id="description" x-model="bean.description"> </textarea>
-        </div>
+            <option :value="elKey" x-text="elLabel"></option>
+          </template>
+        </select>
       </div>
     </div>
-  </form>
 
+    <div class="row">
+      <!-- Generate url -->
+      <div class="col-6">
+        <label class="form-check-label" for="generate_url" x-text="modStrings.LBL_GENERATE_URL + ':'"></label>
+        <input class="form-check-input" type="checkbox" id="generate_url" x-model="bean.generate_url" />
+      </div>        
+    </div>
+
+    <!-- Description -->
+    <div class="row">
+      <div class="col-12">
+        <label class="form-label" for="description" x-text="modStrings.LBL_DESCRIPTION + ':'"></label>
+        <textarea class="form-control" id="description" x-model="bean.description"> </textarea>
+      </div>
+    </div>
+  </div>
+</form>
+
+<div>
   <p x-text="'Name: ' + bean.name"></p>
   <p x-text="'Assigned: ' + bean.assigned_user_name + ' - ' + bean.assigned_user_id"></p>
   <p x-text="'Base Module: ' + bean.base_module"></p>
