--- a/modules/stic_Signatures/SignaturePortal/SignaturePortal.html
+++ b/modules/stic_Signatures/SignaturePortal/SignaturePortal.html
@@ -24,86 +24,173 @@
                 <a href="javascript:history.back()" class="btn-secondary">Volver</a>
             </div>
         </section>
-    {else}
-    <div class="stic-container">
-        <section class="document-area">
-            <h1 class="text-3xl font-extrabold mb-6 text-center text-blue-700">Documento para Firma</h1>
-            <div id="documentContent" class="prose max-w-none document-scroll-content">
-                {$DOCUMENT_HTML_CONTENT}
-            </div>
-        </section>
+        {else}
+        <div class="stic-container">
 
-        <section class="signature-area">
-            <h2 class="text-2xl font-bold mb-4 text-center text-gray-800">Área de Firma</h2>
-            <p class="text-sm text-gray-600 mb-3 text-center">
-                Por favor, dibuje su firma en el recuadro de abajo o use las opciones alternativas.
-            </p>
+            { if $SHOW_PORTAL === true }
+            <section class="document-area">
+                <h1 class="text-3xl font-extrabold mb-6 text-center text-blue-700">Documento para Firma</h1>
+                <div id="documentContent" class="prose max-w-none document-scroll-content">
+                    {$DOCUMENT_HTML_CONTENT}
+                </div>
+            </section>
 
-            <div id="scrollInstructionMessage"
-                class="scroll-instruction-message bg-blue-100 border border-blue-400 text-blue-700 px-4 py-3 rounded-lg relative mb-4 text-center">
-                <span class="block sm:inline">Por favor, desplácese hasta el final del documento para habilitar el área
-                    de firma.</span>
-            </div>
+            <section class="signature-area">
+                <h2 class="text-2xl font-bold mb-4 text-center text-gray-800">Área de Firma</h2>
+                <p class="text-sm text-gray-600 mb-3 text-center">
+                    Por favor, dibuje su firma en el recuadro de abajo o use las opciones alternativas.
+                </p>
 
-            <canvas id="signatureCanvas" class="w-full"></canvas>
-            <div class="action-buttons flex justify-center gap-4 mt-4">
-                <button id="clearSignatureBtn" class="btn-secondary">Limpiar</button>
-                <button id="saveSignatureBtn" class="btn-primary">Guardar Firma</button>
-            </div>
+                <div id="scrollInstructionMessage"
+                    class="scroll-instruction-message bg-blue-100 border border-blue-400 text-blue-700 px-4 py-3 rounded-lg relative mb-4 text-center">
+                    <span class="block sm:inline">Por favor, desplácese hasta el final del documento para habilitar el
+                        área
+                        de firma.</span>
+                </div>
 
-            <div class="signature-alternatives w-full mt-8 pt-6 border-t border-gray-200">
-                <h3 class="text-xl font-bold mb-4 text-center text-gray-700">Opciones de Firma Alternativas</h3>
+                <canvas id="signatureCanvas" class="w-full"></canvas>
+                <div class="action-buttons flex justify-center gap-4 mt-4">
+                    <button id="clearSignatureBtn" class="btn-secondary">Limpiar</button>
+                    <button id="saveSignatureBtn" class="btn-primary">Guardar Firma</button>
+                </div>
 
-                <div class="text-signature-option mb-6 p-4 border border-gray-200 rounded-lg bg-gray-50">
-                    <h4 class="text-lg font-semibold mb-3 text-gray-800">1. Firma por Texto</h4>
-                    <div class="mb-3">
-                        <label for="textSignatureInput" class="block text-sm font-medium text-gray-700 mb-1">Escriba su
-                            nombre completo:</label>
-                        <input type="text" id="textSignatureInput" placeholder="Ej: Juan Pérez"
-                            class="w-full p-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500 text-gray-900">
+                <div class="signature-alternatives w-full mt-8 pt-6 border-t border-gray-200">
+                    <h3 class="text-xl font-bold mb-4 text-center text-gray-700">Opciones de Firma Alternativas</h3>
+
+                    <div class="text-signature-option mb-6 p-4 border border-gray-200 rounded-lg bg-gray-50">
+                        <h4 class="text-lg font-semibold mb-3 text-gray-800">1. Firma por Texto</h4>
+                        <div class="mb-3">
+                            <label for="textSignatureInput" class="block text-sm font-medium text-gray-700 mb-1">Escriba
+                                su
+                                nombre completo:</label>
+                            <input type="text" id="textSignatureInput" placeholder="Ej: Juan Pérez"
+                                class="w-full p-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500 text-gray-900">
+                        </div>
+                        <div class="mb-4">
+                            <label for="fontSelector" class="block text-sm font-medium text-gray-700 mb-1">Seleccione un
+                                estilo de fuente:</label>
+                            <select id="fontSelector"
+                                class="w-full p-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500 text-gray-900">
+                                <option value="Dancing Script">Dancing Script</option>
+                                <option value="Pacifico">Pacifico</option>
+                                <option value="Great Vibes">Great Vibes</option>
+                                <option value="Caveat">Caveat</option>
+                                <option value="Indie Flower">Indie Flower</option>
+                            </select>
+                        </div>
+                        <button id="renderTextSignatureBtn" class="btn-secondary w-full">Renderizar Firma de
+                            Texto</button>
                     </div>
+
+                    <div class="image-signature-option p-4 border border-gray-200 rounded-lg bg-gray-50">
+                        <h4 class="text-lg font-semibold mb-3 text-gray-800">2. Subir Firma como Imagen</h4>
+                        <div class="mb-3">
+                            <label for="imageSignatureInput"
+                                class="block text-sm font-medium text-gray-700 mb-1">Seleccione
+                                un archivo de imagen (PNG/JPG):</label>
+                            <input type="file" id="imageSignatureInput" accept="image/png, image/jpeg"
+                                class="w-full text-gray-700 file:mr-4 file:py-2 file:px-4 file:rounded-md file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100">
+                        </div>
+                        <button id="uploadImageSignatureBtn" class="btn-secondary w-full">Subir Imagen de Firma</button>
+                    </div>
+                </div>
+            </section>
+
+            <section class="audit-trail-area">
+                <h2 class="text-2xl font-bold mb-4 text-center text-gray-800">Registros de Auditoría</h2>
+                <div id="auditRecords" class="space-y-2">
+                    <div class="audit-record bg-gray-50 rounded-md">
+                        <strong>[{$CURRENT_DATE_TIME}]</strong> Documento cargado.<br>
+                    </div>
+                    <div class="audit-record bg-gray-50 rounded-md">
+                        <strong>[{$CURRENT_DATE_MINUS_5_MINS}]</strong> Usuario inició sesión.<br>
+                    </div>
+                </div>
+            </section>
+            {$JAVASCRIPT}
+            {/if}
+
+            { if $OTP_REQUIRED === true && $SHOW_PORTAL !== true }
+            <section class="otp-area max-w-md mx-auto">
+                <h2 class="text-2xl font-bold mb-4 text-center text-gray-800">Verificación OTP</h2>
+                <p class="text-sm text-gray-600 mb-3 text-center">
+                    Por favor, ingrese el código OTP de 6 dígitos que le fue enviado para continuar.
+                </p>
+                <form id="otpForm" method="post" action="">
                     <div class="mb-4">
-                        <label for="fontSelector" class="block text-sm font-medium text-gray-700 mb-1">Seleccione un
-                            estilo de fuente:</label>
-                        <select id="fontSelector"
-                            class="w-full p-2 border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500 text-gray-900">
-                            <option value="Dancing Script">Dancing Script</option>
-                            <option value="Pacifico">Pacifico</option>
-                            <option value="Great Vibes">Great Vibes</option>
-                            <option value="Caveat">Caveat</option>
-                            <option value="Indie Flower">Indie Flower</option>
-                        </select>
+                        <label for="otpInput" class="block text-sm font-medium text-gray-700 mb-1">Código OTP:</label>
+                        <div class="flex justify-center space-x-2">
+                            <input type="text" id="otp-1" name="otp_code_1" maxlength="1" required
+                                class="otp-input w-10 h-10 text-center border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500 text-gray-900 text-xl font-bold">
+                            <input type="text" id="otp-2" name="otp_code_2" maxlength="1" required
+                                class="otp-input w-10 h-10 text-center border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500 text-gray-900 text-xl font-bold">
+                            <input type="text" id="otp-3" name="otp_code_3" maxlength="1" required
+                                class="otp-input w-10 h-10 text-center border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500 text-gray-900 text-xl font-bold">
+                            <input type="text" id="otp-4" name="otp_code_4" maxlength="1" required
+                                class="otp-input w-10 h-10 text-center border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500 text-gray-900 text-xl font-bold">
+                            <input type="text" id="otp-5" name="otp_code_5" maxlength="1" required
+                                class="otp-input w-10 h-10 text-center border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500 text-gray-900 text-xl font-bold">
+                            <input type="text" id="otp-6" name="otp_code_6" maxlength="1" required
+                                class="otp-input w-10 h-10 text-center border border-gray-300 rounded-md focus:ring-blue-500 focus:border-blue-500 text-gray-900 text-xl font-bold">
+                        </div>
                     </div>
-                    <button id="renderTextSignatureBtn" class="btn-secondary w-full">Renderizar Firma de Texto</button>
+                    <button type="submit" class="btn-primary w-full">Verificar OTP</button>
+                </form>
+                <div class="mt-4 text-center">
+                    <button id="resend-otp-btn" class="text-sm font-medium text-blue-600 hover:text-blue-500">
+                        ¿No ha recibido el código? Reenviar OTP
+                    </button>
                 </div>
+            </section>
+            {literal}
+            <script>
+                const inputs = document.querySelectorAll('.otp-input');
+                inputs.forEach((input, index) => {
+                    input.addEventListener('input', (e) => {
+                        if (e.target.value.length === 1 && index < inputs.length - 1) {
+                            inputs[index + 1].focus();
+                        }
+                    });
 
-                <div class="image-signature-option p-4 border border-gray-200 rounded-lg bg-gray-50">
-                    <h4 class="text-lg font-semibold mb-3 text-gray-800">2. Subir Firma como Imagen</h4>
-                    <div class="mb-3">
-                        <label for="imageSignatureInput" class="block text-sm font-medium text-gray-700 mb-1">Seleccione
-                            un archivo de imagen (PNG/JPG):</label>
-                        <input type="file" id="imageSignatureInput" accept="image/png, image/jpeg"
-                            class="w-full text-gray-700 file:mr-4 file:py-2 file:px-4 file:rounded-md file:border-0 file:text-sm file:font-semibold file:bg-blue-50 file:text-blue-700 hover:file:bg-blue-100">
-                    </div>
-                    <button id="uploadImageSignatureBtn" class="btn-secondary w-full">Subir Imagen de Firma</button>
-                </div>
-            </div>
-        </section>
+                    input.addEventListener('keydown', (e) => {
+                        if (e.key === 'Backspace' && e.target.value === '' && index > 0) {
+                            inputs[index - 1].focus();
+                        }
+                    });
+                });
 
-        <section class="audit-trail-area">
-            <h2 class="text-2xl font-bold mb-4 text-center text-gray-800">Registros de Auditoría</h2>
-            <div id="auditRecords" class="space-y-2">
-                <div class="audit-record bg-gray-50 rounded-md">
-                    <strong>[{$CURRENT_DATE_TIME}]</strong> Documento cargado.<br>
-                </div>
-                <div class="audit-record bg-gray-50 rounded-md">
-                    <strong>[{$CURRENT_DATE_MINUS_5_MINS}]</strong> Usuario inició sesión.<br>
-                </div>
-            </div>
-        </section>
-    </div>
-    {/if}
-    {$JAVASCRIPT}
+                const form = document.getElementById('otpForm');
+                form.addEventListener('submit', (e) => {
+                    e.preventDefault();
+                    const fullCode = Array.from(inputs).map(input => input.value).join('');
+                    console.log("Código OTP completo:", fullCode);
+                    // Aquí puedes enviar el código completo al servidor
+                });
+
+                // Agrega la lógica para el botón de reenviar OTP
+                const resendButton = document.getElementById('resend-otp-btn');
+                resendButton.addEventListener('click', () => {
+                    console.log("Solicitando un nuevo código OTP...");
+                    // Implementa la llamada a tu API para solicitar el nuevo código.
+                    // Por ejemplo, con fetch:
+                    // fetch('/api/resend-otp', {
+                    //     method: 'POST',
+                    //     headers: { 'Content-Type': 'application/json' },
+                    //     body: JSON.stringify({ /* datos necesarios para el reenvío */ })
+                    // })
+                    // .then(response => response.json())
+                    // .then(data => {
+                    //     console.log('Nuevo OTP solicitado:', data);
+                    //     alert('Se ha enviado un nuevo código OTP. Por favor, revise su bandeja de entrada.');
+                    // })
+                    // .catch(error => console.error('Error al solicitar OTP:', error));
+                });
+            </script>
+            {/literal}
+            {/if}
+        </div>
+        {/if}
+
 </body>
 
 </html>
