--- a/modules/stic_Advanced_Web_Forms/wizard/steps/step2.html
+++ b/modules/stic_Advanced_Web_Forms/wizard/steps/step2.html
@@ -1,7 +1,27 @@
 <!-- Sidebar -->
 <nav class="wizard-sidebar bg-light border-end p-2 flex-shrink-0">
   <h3 class="text-muted" x-text="modStrings.LBL_MODULES"></h3>
-  <div class="wizard-tree" id="tree-container" x-init="$nextTick(() => {initializeModuleTree($('#tree-container'));});"></div>
+  <div class="text-muted form-check form-switch">
+    <input
+      class="form-check-input"
+      type="checkbox"
+      role="switch"
+      x-model="treeShowAllModules"
+      id="switch_TreeAllModules"
+      checked
+      x-on:change="treeToggleAllModules"
+    />
+    <label class="form-check-label" for="switch_TreeAllModules">[Todos los módulos]</label>
+  </div>
+  <div id="jstree-loading" style="display: flex; justify-content: center; align-items: center; height: 200px;">
+    <div class="spinner-border text-secondary" role="status"></div>
+</div>
+  <div
+    class="wizard-tree"
+    id="jstree-container"
+    x-init="$nextTick(() => {initializeModuleTree($('#jstree-container'));});"
+    style="display: none;"
+  ></div>
 </nav>
 
 <!-- Panell principal -->
@@ -10,16 +30,12 @@
   <div class="flex-fill border rounded p-2 bg-white">
     <!-- Aquí contingut del wizard -->
     <p>[Contingut o contenidor general]</p>
-    <div class="row">
-      <label>Id: </label> <span x-text="treeSelectedNode.id"></span>
-    </div>
-    <div class="row">
-      <label>Path: </label> <span x-text="treeSelectedNode.data?.pathText.join(' » ')"></span>
-    </div>
+    <div class="row"><label>Id: </label> <span x-text="treeSelectedNode.id"></span></div>
+    <div class="row"><label>Path: </label> <span x-text="treeSelectedNode.data?.pathText.join(' » ')"></span></div>
 
     <div>
       <p x-text="'Config DataBlocks: ' + JSON.stringify(configDataBlocks)"></p>
       <p x-text="'Config (bean): ' + bean.config_json"></p>
-    </div>    
+    </div>
   </div>
 </main>
