--- a/modules/stic_Signatures/SignaturePortal/SignaturePortal.html
+++ b/modules/stic_Signatures/SignaturePortal/SignaturePortal.html
@@ -133,6 +133,11 @@
                 { if $OTP_REQUIRED === true && $SHOW_PORTAL !== true }
                 <section class="otp-area max-w-md mx-auto">
                     <h2 class="text-2xl font-bold mb-4 text-center text-gray-800">Código de verificación</h2>
+                    { if isset($OTP_ERROR_MSG) && !empty($OTP_ERROR_MSG) } 
+                    <p class="bg-red-100 border border-red-400 text-red-700 px-4 py-3 rounded-lg mb-4">
+                        <strong>Error:</strong> {$OTP_ERROR_MSG}
+                    </p>
+                    {/if}
                     <p class="text-sm text-gray-600 mb-3 text-center">
                         Por favor, para continuar indique el código de verificación de un solo uso de 6 dígitos ha sido
                         enviado a su correo <strong>{$OTP_MASKED_EMAIL}</strong>.
