--- a/modules/stic_Advanced_Web_Forms/wizard/steps/step2.html
+++ b/modules/stic_Advanced_Web_Forms/wizard/steps/step2.html
@@ -1,6 +1,6 @@
 <!-- Sidebar -->
-<nav class="wizard-sidebar bg-light border-end p-2 flex-shrink-0">
-  <h3 class="text-muted" x-text="modStrings.LBL_MODULES"></h3>
+<nav class="wizard-sidebar bg-light border-end p-2 flex-shrink-0" x-data="{ treeShowAllModules: false }">
+  <h3 class="text-muted" x-text="translate('LBL_MODULES')"></h3>
   <div class="text-muted form-check form-switch">
     <input
       class="form-check-input"
@@ -9,9 +9,9 @@
       x-model="treeShowAllModules"
       id="switch_TreeAllModules"
       checked
-      x-on:change="treeToggleAllModules"
-    />>
-    <label class="form-check-label" for="switch_TreeAllModules">[Todos los módulos]</label>
+      x-on:change="treeToggleAllModules(treeShowAllModules)"
+    />
+    <label class="form-check-label" for="switch_TreeAllModules" x-text="modString.LBL_SHOW_ALL_MODULES"></label>
   </div>
   <div id="jstree-loading" style="display: flex; justify-content: center; align-items: center; height: 200px">
     <div class="spinner-border text-secondary" role="status"></div>
@@ -24,98 +24,142 @@
   ></div>
 </nav>
 
-<!-- Panell principal -->
+<!-- Main Panel -->
 <main class="wizard-main flex-fill d-flex flex-column p-3">
-  <h3 class="mb-2" x-text="modStrings.LBL_DATABLOCKS"></h3>
+  <h3 class="mb-2" x-text="translate('LBL_DATABLOCKS')"></h3>
   <div class="flex-fill border rounded p-2 bg-white">
-    <!-- Aquí contingut del wizard -->
+    <!-- Main Content -->
+    <div class="card p-4"></div>
 
-    <h3 class="card-title" x-text="treeSelectedRelatedModule.pathText?.join(' » ')"></h3>
-    <div class="card p-4">
-      <div x-data="{ activePanel: 'panel1' }">
-        <div class="mb-3">
-          <div class="form-check form-check-inline">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="panelRadio"
-              id="radio1"
-              value="panel1"
-              x-model="activePanel"
-            />
-            <label class="form-check-label" for="radio1">[Datos generales]</label>
+    <!-- Selected item Details [DEBUG] -->
+    <div class="text-muted mt-5" x-data="{ showDetailsData: false }">
+      <div class="form-check form-switch mb-3">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          role="switch"
+          id="showDetailsDataToggleSwitch"
+          x-model="showDetailsData"
+        />
+        <label class="form-check-label" for="showDetailsDataToggleSwitch">[Mostrar Detalles]</label>
+      </div>
+      <div class="card p-4" x-show="showDetailsData">
+        <h3 class="card-title" x-text="treeSelectedRelatedModule.pathText?.join(' » ')"></h3>
+        <div x-data="{ activePanel: 'panel1' }">
+          <div class="mb-3">
+            <div class="form-check form-check-inline">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="panelRadio"
+                id="radio1"
+                value="panel1"
+                x-model="activePanel"
+              />
+              <label class="form-check-label" for="radio1">[General Data]</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="panelRadio"
+                id="radio2"
+                value="panel2"
+                x-model="activePanel"
+              />
+              <label class="form-check-label" for="radio2">[Fields]</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="panelRadio"
+                id="radio3"
+                value="panel3"
+                x-model="activePanel"
+              />
+              <label class="form-check-label" for="radio3">[Relationships]</label>
+            </div>
           </div>
-          <div class="form-check form-check-inline">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="panelRadio"
-              id="radio2"
-              value="panel2"
-              x-model="activePanel"
-            />
-            <label class="form-check-label" for="radio2">[Campos]</label>
-          </div>
-          <div class="form-check form-check-inline">
-            <input
-              class="form-check-input"
-              type="radio"
-              name="panelRadio"
-              id="radio3"
-              value="panel3"
-              x-model="activePanel"
-            />
-            <label class="form-check-label" for="radio3">[Relaciones]</label>
-          </div>
-        </div>
-        <div x-show="activePanel === 'panel1'" class="p-3 border rounded overflow-auto">
-          <h4 class="card-title" x-text="treeSelectedRelatedModule.name"></h4>
-          <template x-for="(value, key) in treeSelectedRelatedModule">
-            <template x-if="key!='fields' && key!='relationships'">
-              <template x-if="value!=''">
-                <p x-text="key + ': ' + value"></p>
+          <div x-show="activePanel === 'panel1'" class="p-3 border rounded overflow-auto">
+            <h4 class="card-title" x-text="treeSelectedRelatedModule.name"></h4>
+            <template x-for="(value, key) in treeSelectedRelatedModule">
+              <template x-if="key!='fields' && key!='relationships'">
+                <template x-if="value!=''">
+                  <p x-text="key + ': ' + value"></p>
+                </template>
               </template>
             </template>
-          </template>
-        </div>
-        <div x-show="activePanel === 'panel2'" class="p-3 border rounded overflow-auto">
-          <h4
-            class="card-title"
-            x-text="(treeSelectedRelatedModule.isRelation?treeSelectedRelatedModule.moduleDestName:treeSelectedRelatedModule.name) + ' - Fields'"
-          ></h4>
-          <div x-data="{ hideInView: false, hideNonRequired: false }">
-            <div class="form-check form-switch mb-3">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                role="switch"
-                id="inViewToggleSwitch"
-                x-model="hideInView"
-              />
-              <label class="form-check-label" for="inViewToggleSwitch">[Ocultar no in View]</label>
+          </div>
+          <div x-show="activePanel === 'panel2'" class="p-3 border rounded overflow-auto">
+            <h4
+              class="card-title"
+              x-text="(treeSelectedRelatedModule.isRelation?treeSelectedRelatedModule.moduleDestName:treeSelectedRelatedModule.name) + ' - Fields'"
+            ></h4>
+            <div x-data="{ hideInView: false, hideNonRequired: false }">
+              <div class="form-check form-switch mb-3">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  role="switch"
+                  id="inViewToggleSwitch"
+                  x-model="hideInView"
+                />
+                <label class="form-check-label" for="inViewToggleSwitch">[Ocultar no in View]</label>
+              </div>
+              <div class="form-check form-switch mb-3">
+                <input
+                  class="form-check-input"
+                  type="checkbox"
+                  role="switch"
+                  id="nonRequiredToggleSwitch"
+                  x-model="hideNonRequired"
+                />
+                <label class="form-check-label" for="nonRequiredToggleSwitch">[Ocultar no required]</label>
+              </div>
+              <table class="table table-bordered table-striped">
+                <thead>
+                  <tr>
+                    <template
+                      x-for="header in Object.keys(treeSelectedRelatedModule.fields && treeSelectedRelatedModule.fields[0] ? treeSelectedRelatedModule.fields[0]: {})"
+                    >
+                      <th x-text="header"></th>
+                    </template>
+                  </tr>
+                </thead>
+                <tbody>
+                  <template x-for="(value, key) in treeSelectedRelatedModule.fields">
+                    <tr
+                      x-show="(!hideNonRequired || treeSelectedRelatedModule.fields[key].required) && (!hideInView || treeSelectedRelatedModule.fields[key].inViews)"
+                    >
+                      <template x-for="(elem_value, elem_key) in treeSelectedRelatedModule.fields[key]">
+                        <td x-text="elem_value"></td>
+                      </template>
+                    </tr>
+                  </template>
+                </tbody>
+              </table>
             </div>
-            <div class="form-check form-switch mb-3">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                role="switch"
-                id="nonRequiredToggleSwitch"
-                x-model="hideNonRequired"
-              />
-              <label class="form-check-label" for="nonRequiredToggleSwitch">[Ocultar no required]</label>
-            </div>
+          </div>
+          <div x-show="activePanel === 'panel3'" class="p-3 border rounded overflow-auto">
+            <h4
+              class="card-title"
+              x-text="(treeSelectedRelatedModule.isRelation?treeSelectedRelatedModule.moduleDestName:treeSelectedRelatedModule.name) + ' - Relationships'"
+            ></h4>
             <table class="table table-bordered table-striped">
               <thead>
                 <tr>
-                  <template x-for="header in Object.keys(treeSelectedRelatedModule.fields[0] || {})">
+                  <template
+                    x-for="header in Object.keys(treeSelectedRelatedModule.relationships && treeSelectedRelatedModule.relationships[0] ? treeSelectedRelatedModule.relationships[0]: {})"
+                  >
                     <th x-text="header"></th>
                   </template>
                 </tr>
               </thead>
               <tbody>
-                <template x-for="(value, key) in treeSelectedRelatedModule.fields">
-                  <tr x-show="(!hideNonRequired || treeSelectedRelatedModule.fields[key].required) && (!hideInView || treeSelectedRelatedModule.fields[key].inViews)">
-                    <template x-for="(elem_value, elem_key) in treeSelectedRelatedModule.fields[key]">
+                <template x-for="(value, key) in treeSelectedRelatedModule.relationships">
+                  <tr>
+                    <template x-for="(elem_value, elem_key) in treeSelectedRelatedModule.relationships[key]">
                       <td x-text="elem_value"></td>
                     </template>
                   </tr>
@@ -124,35 +168,11 @@
             </table>
           </div>
         </div>
-        <div x-show="activePanel === 'panel3'" class="p-3 border rounded overflow-auto">
-          <h4
-            class="card-title"
-            x-text="(treeSelectedRelatedModule.isRelation?treeSelectedRelatedModule.moduleDestName:treeSelectedRelatedModule.name) + ' - Relationships'"
-          ></h4>
-          <table class="table table-bordered table-striped">
-            <thead>
-              <tr>
-                <template x-for="header in Object.keys(treeSelectedRelatedModule.relationships[0] || {})">
-                  <th x-text="header"></th>
-                </template>
-              </tr>
-            </thead>
-            <tbody>
-              <template x-for="(value, key) in treeSelectedRelatedModule.relationships">
-                <tr>
-                  <template x-for="(elem_value, elem_key) in treeSelectedRelatedModule.relationships[key]">
-                    <td x-text="elem_value"></td>
-                  </template>
-                </tr>
-              </template>
-            </tbody>
-          </table>
-        </div>
-      </div>
-      <!-- <div>
+        <!-- <div>
         <p x-text="'Config DataBlocks: ' + JSON.stringify(configDataBlocks)"></p>
         <p x-text="'Config (bean): ' + bean.config_json"></p>
       </div> -->
+      </div>
     </div>
   </div>
 </main>
